--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,20 @@
 spring:
   jpa:
     hibernate:
+      database-platform: org.hibernate.dialect.H2Dialect
       ddl-auto: create-drop
     show-sql: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/shop
-    username: postgres
-    passworg: admin
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/shop
+#    username: postgres
+#    passworg: admin
+
